get /users i get/users/id respostes modificades perque retornin els camps adients
