# app/controllers/users_controller.rb
@@ -15,44 +15,75 @@ class UsersController < ApplicationController
 
   # GET /users or /users.json
   def index
-    @users = User.all
+    @users = User.all.map do |user|
+      user.attributes.except('updated_at', 'url', 'encrypted_password', 'reset_password_token', 'reset_password_sent_at', 'remember_created_at', 'provider', 'uid').merge({
+                                                                                                                                                                            posts_count: user.posts.count,
+                                                                                                                                                                            comments_count: user.comments.count,
+                                                                                                                                                                            boosts_count: user.boosts.count,
+                                                                                                                                                                            avatar: user.avatar.attached? ? url_for(user.avatar) : nil,
+                                                                                                                                                                            cover: user.cover.attached? ? url_for(user.cover) : nil
+                                                                                                                                                                          })
+    end
+    respond_to do |format|
+      format.html
+      format.json { render json: @users }
+    end
   end
 
   # GET /users/1 or /users/1.json
+  # GET /users/1 or /users/1.json
   def show
-    @user = User.find(params[:id])
+    user = User.find(params[:id])
+    posts_count = user.posts.count
+    comments_count = user.comments.count
+    boosts_count = user.boosts.count
+
+    @user_hash = user.attributes.except('updated_at', 'url', 'encrypted_password', 'reset_password_token', 'reset_password_sent_at', 'remember_created_at', 'provider', 'uid').merge({
+                                                                                                                                                                                       posts_count: posts_count,
+                                                                                                                                                                                       comments_count: comments_count,
+                                                                                                                                                                                       boosts_count: boosts_count,
+                                                                                                                                                                                       avatar: user.avatar.attached? ? url_for(user.avatar) : nil,
+                                                                                                                                                                                       cover: user.cover.attached? ? url_for(user.cover) : nil
+                                                                                                                                                                                     })
+
+    @user = user
     @from_user_view = true
     prepare_comments
     @filter = params[:filter] || 'all'
     @sort = params[:sort] || 'top'
     @type = params[:type]
     @search = params[:search]
-  
+
     # Change sort to 'commented' if sort is 'oldest' and filter is 'posts'
     if @sort == 'oldest' && @filter == 'posts'
       @sort = 'top'
-    end 
-  
+    end
+
     case @filter
     when 'posts'
-      @posts = sort_posts(@user.posts)
+      @posts = sort_posts(user.posts)
       @comments = []
       @boosts = []
       @post = @posts.first unless @posts.empty?
     when 'comments'
       @posts = []
-      @comments = sort_comments(@user.comments)
+      @comments = sort_comments(user.comments)
       @boosts = []
       @post = @comments.first.post unless @comments.empty?
     when 'boosts'
       @posts = []
       @comments = []
-      @boosts = @user.boosts
+      @boosts = user.boosts
     when 'all'
-      @posts = sort_posts(@user.posts)
-      @comments = sort_comments(@user.comments)
-      @boosts = @user.boosts
+      @posts = sort_posts(user.posts)
+      @comments = sort_comments(user.comments)
+      @boosts = user.boosts
       @post = @posts.first unless @posts.empty?
+    end
+
+    respond_to do |format|
+      format.html
+      format.json { render json: @user_hash }
     end
   end
   
